mcmc/arlan/template_engine.output
Terminals unused in grammar

   BAD


Grammar

    0 $accept: archetypeprogram $end

    1 archetypeprogram: archetypebody

    2 comment: COMMENT commentbody '\n'

    3 commentbody: /* empty */
    4            | commentbody TEXT

    5 archetypebody: code

    6 code: /* empty */
    7     | code statement
    8     | code comment
    9     | code literal

   10 statement: selectstatement

   11 $@1: /* empty */

   12 statement: IF condition $@1 code elifclause elseclause endiffer

   13 $@2: /* empty */

   14 statement: FUNCTION identifier $@2 '\n' fparameters fbody ENDFUNCTION '\n'
   15          | FOR inst_ref_var IN inst_ref_set_var '\n' code endforrer
   16          | BREAKFOR '\n'
   17          | BREAKFOR comment
   18          | BREAKWHILE '\n'
   19          | WHILE condition '\n' code endwhiler
   20          | CLEARTOK '\n'
   21          | INCLUDE string '\n'
   22          | PRINTTOK string '\n'
   23          | EXITTOK sexpr '\n'
   24          | EMIT string '\n'
   25          | ASSIGN variable '=' expr '\n'
   26          | INVOKE identifier '(' aparameters ')' '\n'
   27          | INVOKE frag_ref_var '=' identifier '(' aparameters ')' '\n'
   28          | ALXLATE activity_type inst_ref_var '\n'
   29          | SPECIALWHERE WORD WORD '\n'
   30          | CREATEOBJ inst_ref_var OF obj_keyletters '\n'

   31 selectstatement: SELECTONE inst_ref_var RELATEDBY inst_chain whereclause '\n'
   32                | SELECTANY inst_ref_var RELATEDBY inst_chain whereclause '\n'
   33                | SELECTMANY inst_ref_set_var RELATEDBY inst_chain whereclause '\n'
   34                | SELECTANY inst_ref_var FROMINSTOF obj_keyletters whereclause '\n'
   35                | SELECTMANY inst_ref_set_var FROMINSTOF obj_keyletters whereclause '\n'

   36 whereclause: /* empty */
   37            | WHERE condition

   38 fparameters: /* empty */
   39            | fparameters PARAM TYPE param_name comment
   40            | fparameters PARAM TYPE param_name '\n'
   41            | fparameters comment

   42 fbody: /* empty */
   43      | statement code
   44      | literal code

   45 aparameters: /* empty */
   46            | term aparameters
   47            | ',' term aparameters

   48 elifclause: /* empty */

   49 $@3: /* empty */

   50 elifclause: elifclause ELIF condition $@3 code

   51 elseclause: /* empty */

   52 $@4: /* empty */

   53 elseclause: elseclause ELSE $@4 code

   54 endiffer: ENDIF '\n'
   55         | ENDIF comment

   56 endwhiler: ENDWHILE '\n'
   57          | ENDWHILE comment

   58 endforrer: ENDFOR '\n'
   59          | ENDFOR comment

   60 condition: '(' expr ')'

   61 sexpr: UOP term
   62      | '-' term
   63      | term bop expr
   64      | term
   65      | inst_ref_set_var '|' inst_ref_set_var

   66 expr: '(' expr ')'
   67     | UOP '(' expr ')'
   68     | '(' expr ')' bop expr
   69     | sexpr

   70 term: string
   71     | identifier
   72     | substitutionvariable
   73     | INTconstant
   74     | REALconstant
   75     | term ARROW identifier
   76     | term ':' parsekeyword
   77     | term '.' attribute

   78 reltraversal: RELTRANS
   79             | RELTRANS '.' '\'' WORD '\''
   80             | RELTRANS '.' RELTRANS

   81 attribute: identifier

   82 parsekeyword: identifier
   83             | substitutionvariable

   84 format: /* empty */
   85       | FORMAT

   86 variable: identifier
   87         | identifier '.' identifier
   88         | keyword

   89 keyword: UOP
   90        | TYPE
   91        | WHERE
   92        | IN

   93 param_name: WORD

   94 frag_ref_var: WORD

   95 inst_ref_var: WORD

   96 inst_ref_set_var: WORD

   97 inst_chain: WORD
   98           | inst_chain ARROW WORD '[' reltraversal ']'

   99 obj_keyletters: WORD

  100 activity_type: WORD

  101 identifier: WORD
  102           | WORD '[' reltraversal ']'

  103 bop: LE
  104    | GE
  105    | EQ
  106    | NE
  107    | AND
  108    | OR
  109    | '>'
  110    | '<'
  111    | '+'
  112    | '-'
  113    | '*'
  114    | '/'

  115 literal: LITERAL literalbody '\n'
  116        | '\n'

  117 literalbody: /* empty */
  118            | literalbody LITERAL
  119            | literalbody substitutionvariable

  120 substitutionvariable: '$' format '{' term '}'

  121 string: '"' stringbody '"'

  122 stringbody: /* empty */
  123           | stringbody TEXT
  124           | stringbody WORD
  125           | stringbody substitutionvariable


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 14 15 16 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 40 54 56 58 115 116
'"' (34) 121
'$' (36) 120
'\'' (39) 79
'(' (40) 26 27 60 66 67 68
')' (41) 26 27 60 66 67 68
'*' (42) 113
'+' (43) 111
',' (44) 47
'-' (45) 62 112
'.' (46) 77 79 80 87
'/' (47) 114
':' (58) 76
'<' (60) 110
'=' (61) 25 27
'>' (62) 109
'[' (91) 98 102
']' (93) 98 102
'{' (123) 120
'|' (124) 65
'}' (125) 120
error (256)
SELECTONE (258) 31
SELECTANY (259) 32 34
SELECTMANY (260) 33 35
CREATEOBJ (261) 30
OF (262) 30
IF (263) 12
FOR (264) 15
TYPE (265) 39 40 90
RELATEDBY (266) 31 32 33
ELIF (267) 50
ENDFOR (268) 58 59
FORMAT (269) 85
FUNCTION (270) 14
ELSE (271) 53
BREAKFOR (272) 16 17
BAD (273)
PARAM (274) 39 40
ENDIF (275) 54 55
COMMENT (276) 2
WHERE (277) 37 91
ENDFUNCTION (278) 14
FROMINSTOF (279) 34 35
TEXT (280) 4 123
INCLUDE (281) 21
ASSIGN (282) 25
PRINTTOK (283) 22
EXITTOK (284) 23
EMIT (285) 24
CLEARTOK (286) 20
INVOKE (287) 26 27
IN (288) 15 92
UOP (289) 61 67 89
RELTRANS (290) 78 79 80
ALXLATE (291) 28
SPECIALWHERE (292) 29
WHILE (293) 19
ENDWHILE (294) 56 57
BREAKWHILE (295) 18
WORD (296) 29 79 93 94 95 96 97 98 99 100 101 102 124
LITERAL (297) 115 118
REALconstant (298) 74
INTconstant (299) 73
ARROW (300) 75 98
LE (301) 103
GE (302) 104
EQ (303) 105
NE (304) 106
AND (305) 107
OR (306) 108
UMINUS (307)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
archetypeprogram (75)
    on left: 1, on right: 0
comment (76)
    on left: 2, on right: 8 17 39 41 55 57 59
commentbody (77)
    on left: 3 4, on right: 2 4
archetypebody (78)
    on left: 5, on right: 1
code (79)
    on left: 6 7 8 9, on right: 5 7 8 9 12 15 19 43 44 50 53
statement (80)
    on left: 10 12 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    30, on right: 7 43
$@1 (81)
    on left: 11, on right: 12
$@2 (82)
    on left: 13, on right: 14
selectstatement (83)
    on left: 31 32 33 34 35, on right: 10
whereclause (84)
    on left: 36 37, on right: 31 32 33 34 35
fparameters (85)
    on left: 38 39 40 41, on right: 14 39 40 41
fbody (86)
    on left: 42 43 44, on right: 14
aparameters (87)
    on left: 45 46 47, on right: 26 27 46 47
elifclause (88)
    on left: 48 50, on right: 12 50
$@3 (89)
    on left: 49, on right: 50
elseclause (90)
    on left: 51 53, on right: 12 53
$@4 (91)
    on left: 52, on right: 53
endiffer (92)
    on left: 54 55, on right: 12
endwhiler (93)
    on left: 56 57, on right: 19
endforrer (94)
    on left: 58 59, on right: 15
condition (95)
    on left: 60, on right: 12 19 37 50
sexpr (96)
    on left: 61 62 63 64 65, on right: 23 69
expr (97)
    on left: 66 67 68 69, on right: 25 60 63 66 67 68
term (98)
    on left: 70 71 72 73 74 75 76 77, on right: 46 47 61 62 63 64 75
    76 77 120
reltraversal (99)
    on left: 78 79 80, on right: 98 102
attribute (100)
    on left: 81, on right: 77
parsekeyword (101)
    on left: 82 83, on right: 76
format (102)
    on left: 84 85, on right: 120
variable (103)
    on left: 86 87 88, on right: 25
keyword (104)
    on left: 89 90 91 92, on right: 88
param_name (105)
    on left: 93, on right: 39 40
frag_ref_var (106)
    on left: 94, on right: 27
inst_ref_var (107)
    on left: 95, on right: 15 28 30 31 32 34
inst_ref_set_var (108)
    on left: 96, on right: 15 33 35 65
inst_chain (109)
    on left: 97 98, on right: 31 32 33 98
obj_keyletters (110)
    on left: 99, on right: 30 34 35
activity_type (111)
    on left: 100, on right: 28
identifier (112)
    on left: 101 102, on right: 14 26 27 71 75 81 82 86 87
bop (113)
    on left: 103 104 105 106 107 108 109 110 111 112 113 114, on right:
    63 68
literal (114)
    on left: 115 116, on right: 9 44
literalbody (115)
    on left: 117 118 119, on right: 115 118 119
substitutionvariable (116)
    on left: 120, on right: 72 83 119 125
string (117)
    on left: 121, on right: 21 22 24 70
stringbody (118)
    on left: 122 123 124 125, on right: 121 123 124 125


state 0

    0 $accept: . archetypeprogram $end

    $default  reduce using rule 6 (code)

    archetypeprogram  go to state 1
    archetypebody     go to state 2
    code              go to state 3


state 1

    0 $accept: archetypeprogram . $end

    $end  shift, and go to state 4


state 2

    1 archetypeprogram: archetypebody .

    $default  reduce using rule 1 (archetypeprogram)


state 3

    5 archetypebody: code .
    7 code: code . statement
    8     | code . comment
    9     | code . literal

    SELECTONE     shift, and go to state 5
    SELECTANY     shift, and go to state 6
    SELECTMANY    shift, and go to state 7
    CREATEOBJ     shift, and go to state 8
    IF            shift, and go to state 9
    FOR           shift, and go to state 10
    FUNCTION      shift, and go to state 11
    BREAKFOR      shift, and go to state 12
    COMMENT       shift, and go to state 13
    INCLUDE       shift, and go to state 14
    ASSIGN        shift, and go to state 15
    PRINTTOK      shift, and go to state 16
    EXITTOK       shift, and go to state 17
    EMIT          shift, and go to state 18
    CLEARTOK      shift, and go to state 19
    INVOKE        shift, and go to state 20
    ALXLATE       shift, and go to state 21
    SPECIALWHERE  shift, and go to state 22
    WHILE         shift, and go to state 23
    BREAKWHILE    shift, and go to state 24
    LITERAL       shift, and go to state 25
    '\n'          shift, and go to state 26

    $default  reduce using rule 5 (archetypebody)

    comment          go to state 27
    statement        go to state 28
    selectstatement  go to state 29
    literal          go to state 30


state 4

    0 $accept: archetypeprogram $end .

    $default  accept


state 5

   31 selectstatement: SELECTONE . inst_ref_var RELATEDBY inst_chain whereclause '\n'

    WORD  shift, and go to state 31

    inst_ref_var  go to state 32


state 6

   32 selectstatement: SELECTANY . inst_ref_var RELATEDBY inst_chain whereclause '\n'
   34                | SELECTANY . inst_ref_var FROMINSTOF obj_keyletters whereclause '\n'

    WORD  shift, and go to state 31

    inst_ref_var  go to state 33


state 7

   33 selectstatement: SELECTMANY . inst_ref_set_var RELATEDBY inst_chain whereclause '\n'
   35                | SELECTMANY . inst_ref_set_var FROMINSTOF obj_keyletters whereclause '\n'

    WORD  shift, and go to state 34

    inst_ref_set_var  go to state 35


state 8

   30 statement: CREATEOBJ . inst_ref_var OF obj_keyletters '\n'

    WORD  shift, and go to state 31

    inst_ref_var  go to state 36


state 9

   12 statement: IF . condition $@1 code elifclause elseclause endiffer

    '('  shift, and go to state 37

    condition  go to state 38


state 10

   15 statement: FOR . inst_ref_var IN inst_ref_set_var '\n' code endforrer

    WORD  shift, and go to state 31

    inst_ref_var  go to state 39


state 11

   14 statement: FUNCTION . identifier $@2 '\n' fparameters fbody ENDFUNCTION '\n'

    WORD  shift, and go to state 40

    identifier  go to state 41


state 12

   16 statement: BREAKFOR . '\n'
   17          | BREAKFOR . comment

    COMMENT  shift, and go to state 13
    '\n'     shift, and go to state 42

    comment  go to state 43


state 13

    2 comment: COMMENT . commentbody '\n'

    $default  reduce using rule 3 (commentbody)

    commentbody  go to state 44


state 14

   21 statement: INCLUDE . string '\n'

    '"'  shift, and go to state 45

    string  go to state 46


state 15

   25 statement: ASSIGN . variable '=' expr '\n'

    TYPE   shift, and go to state 47
    WHERE  shift, and go to state 48
    IN     shift, and go to state 49
    UOP    shift, and go to state 50
    WORD   shift, and go to state 40

    variable    go to state 51
    keyword     go to state 52
    identifier  go to state 53


state 16

   22 statement: PRINTTOK . string '\n'

    '"'  shift, and go to state 45

    string  go to state 54


state 17

   23 statement: EXITTOK . sexpr '\n'

    UOP           shift, and go to state 55
    WORD          shift, and go to state 56
    REALconstant  shift, and go to state 57
    INTconstant   shift, and go to state 58
    '-'           shift, and go to state 59
    '$'           shift, and go to state 60
    '"'           shift, and go to state 45

    sexpr                 go to state 61
    term                  go to state 62
    inst_ref_set_var      go to state 63
    identifier            go to state 64
    substitutionvariable  go to state 65
    string                go to state 66


state 18

   24 statement: EMIT . string '\n'

    '"'  shift, and go to state 45

    string  go to state 67


state 19

   20 statement: CLEARTOK . '\n'

    '\n'  shift, and go to state 68


state 20

   26 statement: INVOKE . identifier '(' aparameters ')' '\n'
   27          | INVOKE . frag_ref_var '=' identifier '(' aparameters ')' '\n'

    WORD  shift, and go to state 69

    frag_ref_var  go to state 70
    identifier    go to state 71


state 21

   28 statement: ALXLATE . activity_type inst_ref_var '\n'

    WORD  shift, and go to state 72

    activity_type  go to state 73


state 22

   29 statement: SPECIALWHERE . WORD WORD '\n'

    WORD  shift, and go to state 74


state 23

   19 statement: WHILE . condition '\n' code endwhiler

    '('  shift, and go to state 37

    condition  go to state 75


state 24

   18 statement: BREAKWHILE . '\n'

    '\n'  shift, and go to state 76


state 25

  115 literal: LITERAL . literalbody '\n'

    $default  reduce using rule 117 (literalbody)

    literalbody  go to state 77


state 26

  116 literal: '\n' .

    $default  reduce using rule 116 (literal)


state 27

    8 code: code comment .

    $default  reduce using rule 8 (code)


state 28

    7 code: code statement .

    $default  reduce using rule 7 (code)


state 29

   10 statement: selectstatement .

    $default  reduce using rule 10 (statement)


state 30

    9 code: code literal .

    $default  reduce using rule 9 (code)


state 31

   95 inst_ref_var: WORD .

    $default  reduce using rule 95 (inst_ref_var)


state 32

   31 selectstatement: SELECTONE inst_ref_var . RELATEDBY inst_chain whereclause '\n'

    RELATEDBY  shift, and go to state 78


state 33

   32 selectstatement: SELECTANY inst_ref_var . RELATEDBY inst_chain whereclause '\n'
   34                | SELECTANY inst_ref_var . FROMINSTOF obj_keyletters whereclause '\n'

    RELATEDBY   shift, and go to state 79
    FROMINSTOF  shift, and go to state 80


state 34

   96 inst_ref_set_var: WORD .

    $default  reduce using rule 96 (inst_ref_set_var)


state 35

   33 selectstatement: SELECTMANY inst_ref_set_var . RELATEDBY inst_chain whereclause '\n'
   35                | SELECTMANY inst_ref_set_var . FROMINSTOF obj_keyletters whereclause '\n'

    RELATEDBY   shift, and go to state 81
    FROMINSTOF  shift, and go to state 82


state 36

   30 statement: CREATEOBJ inst_ref_var . OF obj_keyletters '\n'

    OF  shift, and go to state 83


state 37

   60 condition: '(' . expr ')'

    UOP           shift, and go to state 84
    WORD          shift, and go to state 56
    REALconstant  shift, and go to state 57
    INTconstant   shift, and go to state 58
    '('           shift, and go to state 85
    '-'           shift, and go to state 59
    '$'           shift, and go to state 60
    '"'           shift, and go to state 45

    sexpr                 go to state 86
    expr                  go to state 87
    term                  go to state 62
    inst_ref_set_var      go to state 63
    identifier            go to state 64
    substitutionvariable  go to state 65
    string                go to state 66


state 38

   12 statement: IF condition . $@1 code elifclause elseclause endiffer

    $default  reduce using rule 11 ($@1)

    $@1  go to state 88


state 39

   15 statement: FOR inst_ref_var . IN inst_ref_set_var '\n' code endforrer

    IN  shift, and go to state 89


state 40

  101 identifier: WORD .
  102           | WORD . '[' reltraversal ']'

    '['  shift, and go to state 90

    $default  reduce using rule 101 (identifier)


state 41

   14 statement: FUNCTION identifier . $@2 '\n' fparameters fbody ENDFUNCTION '\n'

    $default  reduce using rule 13 ($@2)

    $@2  go to state 91


state 42

   16 statement: BREAKFOR '\n' .

    $default  reduce using rule 16 (statement)


state 43

   17 statement: BREAKFOR comment .

    $default  reduce using rule 17 (statement)


state 44

    2 comment: COMMENT commentbody . '\n'
    4 commentbody: commentbody . TEXT

    TEXT  shift, and go to state 92
    '\n'  shift, and go to state 93


state 45

  121 string: '"' . stringbody '"'

    $default  reduce using rule 122 (stringbody)

    stringbody  go to state 94


state 46

   21 statement: INCLUDE string . '\n'

    '\n'  shift, and go to state 95


state 47

   90 keyword: TYPE .

    $default  reduce using rule 90 (keyword)


state 48

   91 keyword: WHERE .

    $default  reduce using rule 91 (keyword)


state 49

   92 keyword: IN .

    $default  reduce using rule 92 (keyword)


state 50

   89 keyword: UOP .

    $default  reduce using rule 89 (keyword)


state 51

   25 statement: ASSIGN variable . '=' expr '\n'

    '='  shift, and go to state 96


state 52

   88 variable: keyword .

    $default  reduce using rule 88 (variable)


state 53

   86 variable: identifier .
   87         | identifier . '.' identifier

    '.'  shift, and go to state 97

    $default  reduce using rule 86 (variable)


state 54

   22 statement: PRINTTOK string . '\n'

    '\n'  shift, and go to state 98


state 55

   61 sexpr: UOP . term

    WORD          shift, and go to state 40
    REALconstant  shift, and go to state 57
    INTconstant   shift, and go to state 58
    '$'           shift, and go to state 60
    '"'           shift, and go to state 45

    term                  go to state 99
    identifier            go to state 64
    substitutionvariable  go to state 65
    string                go to state 66


state 56

   96 inst_ref_set_var: WORD .
  101 identifier: WORD .
  102           | WORD . '[' reltraversal ']'

    '['  shift, and go to state 90

    '|'       reduce using rule 96 (inst_ref_set_var)
    $default  reduce using rule 101 (identifier)


state 57

   74 term: REALconstant .

    $default  reduce using rule 74 (term)


state 58

   73 term: INTconstant .

    $default  reduce using rule 73 (term)


state 59

   62 sexpr: '-' . term

    WORD          shift, and go to state 40
    REALconstant  shift, and go to state 57
    INTconstant   shift, and go to state 58
    '$'           shift, and go to state 60
    '"'           shift, and go to state 45

    term                  go to state 100
    identifier            go to state 64
    substitutionvariable  go to state 65
    string                go to state 66


state 60

  120 substitutionvariable: '$' . format '{' term '}'

    FORMAT  shift, and go to state 101

    $default  reduce using rule 84 (format)

    format  go to state 102


state 61

   23 statement: EXITTOK sexpr . '\n'

    '\n'  shift, and go to state 103


state 62

   63 sexpr: term . bop expr
   64      | term .
   75 term: term . ARROW identifier
   76     | term . ':' parsekeyword
   77     | term . '.' attribute

    ARROW  shift, and go to state 104
    LE     shift, and go to state 105
    GE     shift, and go to state 106
    EQ     shift, and go to state 107
    NE     shift, and go to state 108
    AND    shift, and go to state 109
    OR     shift, and go to state 110
    '-'    shift, and go to state 111
    ':'    shift, and go to state 112
    '.'    shift, and go to state 113
    '>'    shift, and go to state 114
    '<'    shift, and go to state 115
    '+'    shift, and go to state 116
    '*'    shift, and go to state 117
    '/'    shift, and go to state 118

    $default  reduce using rule 64 (sexpr)

    bop  go to state 119


state 63

   65 sexpr: inst_ref_set_var . '|' inst_ref_set_var

    '|'  shift, and go to state 120


state 64

   71 term: identifier .

    $default  reduce using rule 71 (term)


state 65

   72 term: substitutionvariable .

    $default  reduce using rule 72 (term)


state 66

   70 term: string .

    $default  reduce using rule 70 (term)


state 67

   24 statement: EMIT string . '\n'

    '\n'  shift, and go to state 121


state 68

   20 statement: CLEARTOK '\n' .

    $default  reduce using rule 20 (statement)


state 69

   94 frag_ref_var: WORD .
  101 identifier: WORD .
  102           | WORD . '[' reltraversal ']'

    '['  shift, and go to state 90

    '('       reduce using rule 101 (identifier)
    $default  reduce using rule 94 (frag_ref_var)


state 70

   27 statement: INVOKE frag_ref_var . '=' identifier '(' aparameters ')' '\n'

    '='  shift, and go to state 122


state 71

   26 statement: INVOKE identifier . '(' aparameters ')' '\n'

    '('  shift, and go to state 123


state 72

  100 activity_type: WORD .

    $default  reduce using rule 100 (activity_type)


state 73

   28 statement: ALXLATE activity_type . inst_ref_var '\n'

    WORD  shift, and go to state 31

    inst_ref_var  go to state 124


state 74

   29 statement: SPECIALWHERE WORD . WORD '\n'

    WORD  shift, and go to state 125


state 75

   19 statement: WHILE condition . '\n' code endwhiler

    '\n'  shift, and go to state 126


state 76

   18 statement: BREAKWHILE '\n' .

    $default  reduce using rule 18 (statement)


state 77

  115 literal: LITERAL literalbody . '\n'
  118 literalbody: literalbody . LITERAL
  119            | literalbody . substitutionvariable

    LITERAL  shift, and go to state 127
    '\n'     shift, and go to state 128
    '$'      shift, and go to state 60

    substitutionvariable  go to state 129


state 78

   31 selectstatement: SELECTONE inst_ref_var RELATEDBY . inst_chain whereclause '\n'

    WORD  shift, and go to state 130

    inst_chain  go to state 131


state 79

   32 selectstatement: SELECTANY inst_ref_var RELATEDBY . inst_chain whereclause '\n'

    WORD  shift, and go to state 130

    inst_chain  go to state 132


state 80

   34 selectstatement: SELECTANY inst_ref_var FROMINSTOF . obj_keyletters whereclause '\n'

    WORD  shift, and go to state 133

    obj_keyletters  go to state 134


state 81

   33 selectstatement: SELECTMANY inst_ref_set_var RELATEDBY . inst_chain whereclause '\n'

    WORD  shift, and go to state 130

    inst_chain  go to state 135


state 82

   35 selectstatement: SELECTMANY inst_ref_set_var FROMINSTOF . obj_keyletters whereclause '\n'

    WORD  shift, and go to state 133

    obj_keyletters  go to state 136


state 83

   30 statement: CREATEOBJ inst_ref_var OF . obj_keyletters '\n'

    WORD  shift, and go to state 133

    obj_keyletters  go to state 137


state 84

   61 sexpr: UOP . term
   67 expr: UOP . '(' expr ')'

    WORD          shift, and go to state 40
    REALconstant  shift, and go to state 57
    INTconstant   shift, and go to state 58
    '('           shift, and go to state 138
    '$'           shift, and go to state 60
    '"'           shift, and go to state 45

    term                  go to state 99
    identifier            go to state 64
    substitutionvariable  go to state 65
    string                go to state 66


state 85

   66 expr: '(' . expr ')'
   68     | '(' . expr ')' bop expr

    UOP           shift, and go to state 84
    WORD          shift, and go to state 56
    REALconstant  shift, and go to state 57
    INTconstant   shift, and go to state 58
    '('           shift, and go to state 85
    '-'           shift, and go to state 59
    '$'           shift, and go to state 60
    '"'           shift, and go to state 45
